# hotkey-prompt-refiner

./: BUILDING.md  CLAUDE.md  Cargo.toml  Cargo.toml.old  INSTALLATION.md  README.md  build-release.sh  config.toml  package-lock.json  package.json  prompt_refiner_prd_updated_gemini.md  prompt_template.txt  prompt_template.txt.local  ui-advice.md
.claude/: settings.local.json
.claude/context/: README.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-vision.md  tech-context.md
.claude/epics/hotkey-prompt-refiner/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  10.md  11.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  dependencies.md  epic.md
.claude/epics/tauri GUI (multi-platform)/: 13.md  14.md  15.md  16.md  17.md  18.md  19.md  20-analysis.md  20.md  21.md  22.md  epic.md  github-mapping.md
.claude/epics/tauri GUI (multi-platform)/updates/20/: stream-1.md
.claude/prds/: hotkey-prompt-refiner.md  tauri GUI (multi-platform).md
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/chunks/: CKAymY6x.js  Cb4_0wpw.js  CqPrI6_m.js  D7i6tuYm.js  DK4AQOE3.js
.svelte-kit/output/client/_app/immutable/entry/: app.CjrrDGPx.js  app.M4UtiOG-.js  start.B-2rEjzs.js
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js  remote-entry.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: index.js  internal.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
src/: anthropic.rs  clipboard.rs  config.rs  hotkey_manager.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  hotkey.rs  hotkey_manager.rs  lib.rs  main.rs  migration.rs  models.rs  paste.rs  workflow.rs
src-tauri/src/lib/: history.rs
src/lib/components/: ApiKeyInput.svelte  Sidebar.svelte  TemplateEditor.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/history/: +page.svelte
src/routes/settings/: +page.svelte
(+6 files in other folders)
