[package]
name = "hotkey-prompt-refiner"
version = "0.1.0"
edition = "2024"

[dependencies]
# System integration
global-hotkey = "0.6"
arboard = "3.4"
enigo = "0.2"
dotenv = "0.15"

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }

# API communication - CRITICAL: Use ONLY these for Anthropic API
# DO NOT add anthropic-sdk, claude-api, or any other Anthropic-specific crates
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
