[package]
name = "hotkey-prompt-refiner"
version = "0.1.0"
description = "AI-powered text processing via global hotkeys"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hotkey_prompt_refiner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"

# System integration (from original project)
global-hotkey = "0.6"
tao = "0.30"
arboard = "3.4"
enigo = "0.2"
dotenv = "0.15"

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }

# API communication - CRITICAL: Use ONLY these for Anthropic API
# DO NOT add anthropic-sdk, claude-api, or any other Anthropic-specific crates
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration and secure storage (Issue #21)
keyring = "3.2"
directories = "5.0"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
once_cell = "1.20"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

